# pokemon-go-max-mechanics-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  main.py  pyproject.toml
.cursor/rules/: code-quality.mdc  good-practices.mdc
.github/workflows/: ci.yml
src/application/: app.py
src/application/constants/: api_constants.py  ui_constants.py  view_constants.py
src/application/services/: pokemon_go_api.py  web_image_processing.py
src/application/use_cases/: fetch_pokemon_use_case.py
src/application/views/: base_view.py  main_menu_view.py  pokedex_view.py
src/constants/: api_constants.py
src/domain/: constants.py
src/domain/constants/: battle_mechanics.py  combat_power_multiplier.py  type_effectiveness.py  weather_boost.py
src/domain/entities/: max_boss.py  max_pokemon.py  move.py  pokemon.py
src/domain/errors/: base.py  http.py
src/domain/interfaces/: image_processor.py
src/domain/ports/outbound/: http_client_port.py  pokemon_data_port.py
src/domain/repositories/: base.py  max_pokemon.py
src/domain/services/: combat_mechanics.py  combat_power_multiplier_service.py  max_mechanics.py  stats_service.py  type_effectiveness.py  type_effectiveness_service.py  weather.py  weather_service.py
src/domain/value_objects/: generation.py  tier.py  types.py  weather.py
src/infrastructure/adapters/outbound/: httpx_client_adapter.py  pokemon_go_api_adapter.py
src/infrastructure/constants/: api_constants.py
src/infrastructure/dependency_injection/: example.py  setup.py
src/infrastructure/dependency_injection/modules/: http_client.py  image_service.py  pokemon_data_module.py  pokemon_go_api_service.py
src/infrastructure/services/: pil_image_processor.py
tests/application/: test_app.py  test_image_service.py.bak  test_pokemon_go_api_service.py  test_web_image_processing_service.py
tests/application/use_cases/: test_fetch_pokemon_use_case.py
tests/application/views/: test_base_view.py  test_pokedex_view.py
tests/domain/constants/: test_combat_power_multiplier.py  test_type_effectiveness.py  test_weather_boost.py
tests/domain/entities/: test_max_boss.py  test_max_pokemon.py  test_move.py  test_pokemon.py
tests/domain/services/: test_combat_power_multiplier_service.py  test_stats_service.py  test_type_effectiveness_service.py  test_weather_service.py
tests/domain/value_objects/: test_generation.py  test_tier.py  test_types.py  test_weather.py
tests/infrastructure/adapters/outbound/: __init__.py  test_httpx_client_adapter.py  test_pokemon_go_api_adapter.py
tests/infrastructure/constants/: test_api_constants.py
tests/infrastructure/dependency_injection/: test_constants.py  test_modules.py  test_setup.py
tests/infrastructure/dependency_injection/modules/: test_http_client_module.py  test_image_service_module.py  test_pokemon_data_module.py
tests/infrastructure/services/: test_pil_image_processor.py
