[project]
name = "pokemon-go-max-mechanics"
version = "0.1.0"
description = "Pokémon Go project related to Max mechanics."
authors = [{ name = "Daniel del Castillo", email = "fwd.ddca@pm.me" }]
requires-python = ">=3.13, <3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "httpx>=0.28.1, <1.0.0",
    "injector>=0.22.0, <1.0.0",
    "pillow>=10.0.0, <11.0.0",
]

[dependency-groups]
code-quality = [
    "mypy>=1.16.0,<2",
    "ruff>=0.11.13,<1.0.0",
    "isort>=6.0.1,<7",
]
test = [
    "pytest>=8.4.0,<9",
    "pytest-asyncio>=0.23.0,<0.24",
    "pytest-cov>=6.2.1",
]
psycopg2-binary = ["psycopg2-binary>=2.9.10,<3"]
psycopg2 = ["psycopg2>=2.9.10,<3"]

[tool.uv]
# All dependency groups are now optional - install them explicitly when needed

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
allow_redefinition = true
disallow_untyped_defs = true
disallow_untyped_calls = true
show_column_numbers = true
ignore_missing_imports = true
exclude = ''' 
/(
  | .venv/
  | venv/
)/
'''

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 119
target-version = "py313"

[tool.ruff.format]
docstring-code-format = false
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations
    "SIM", # flake8-simplify
    "TCH", # type-checking
    "RUF", # Ruff-specific rules
]
ignore = ["E203", "D203", "D100", "D101", "D104"]
exclude = [
    "tests/**/*",
    ".venv",
    "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
